Skrevet lidt mere

--- a/Rapport/1Chapters/RMS/Design.tex
+++ b/Rapport/1Chapters/RMS/Design.tex
@@ -28,7 +28,11 @@ Hence the minimum samples needed for detecting every possible frequency in the s
 
 \section{Determine parameters}
 In order to determine the desired threshold for each band a subjective measure is taken.
-From \autoref{app:journal_speaker_test} it is Assumed that the gain throughout the system is 37 dB. With this gain it is possible to achieve sound pressures of upwards 105 dB. Assuming the 
+From \autoref{app:journal_speaker_test} it is Assumed that the gain throughout the system is 37 dB. With this gain it is possible to achieve sound pressures of upwards 105 dB. Assuming the compressor only are to activate when the wattage goes above the recommended 150 Watt it is possible to determine the maximum RMS value. 
+
+\subsubsection*{Resolution}
+When the 
+
 
 
 
