--- a/Rapport/1Chapters/Implementation/ImplementationMAIN.tex
+++ b/Rapport/1Chapters/Implementation/ImplementationMAIN.tex
@@ -1,3 +1,5 @@
+\input{1Chapters/Implementation/IntroductionImplementation.tex}
+
 \input{1Chapters/Implementation/mainCode.tex}
 
 \input{1Chapters/Implementation/filterImplementation.tex}
