--- a/Rapport/1Chapters/Implementation/filterImplementation.tex
+++ b/Rapport/1Chapters/Implementation/filterImplementation.tex
@@ -13,7 +13,7 @@ Where downFunc1 is used to decimate and spectral subtract the input sample, dela
 The decimation block is described in \textbf{XX} and is seen on \autoref{fig:DownsamplingSimulationCopy}.
 \begin{figure}[H]
     \centering
-	\includegraphics[width=\textwidth, page=2]{Simulation}
+	\includegraphics[width=0.7\textwidth, page=2]{Simulation}
     \caption{Decimation block diagram}
     \label{fig:DownsamplingSimulationCopy}
 \end{figure}
@@ -24,7 +24,7 @@ The block contains different components which has to be implemented:
 \item Spectral subtraction.
 \item Downsampling and outputting. 
 \end{itemize}
-
+Reading 
 
 
 
@@ -32,7 +32,7 @@ The block contains different components which has to be implemented:
 The interpolation block is described in \textbf{XX} and is seen on \autoref{fig:upsamplingSimulationCopy}.
 \begin{figure}[H]
     \centering
-	\includegraphics[width=\textwidth, page=11]{Simulation}
+	\includegraphics[width=0.7\textwidth, page=11]{Simulation}
     \caption{Interpolation block diagram}
     \label{fig:upsamplingSimulationCopy}
 \end{figure}
