--- a/Rapport/main.tex
+++ b/Rapport/main.tex
@@ -149,7 +149,7 @@
  \part{Appendix}
  \appendix
 % \addcontentsline{toc}{chapter}{Appendix}
-\include{2Appendix/AppendixMAIN}
+%\include{2Appendix/AppendixMAIN}
 
 
 \end{document}
