--- a/Rapport/1Chapters/Implementation/mainCode.tex
+++ b/Rapport/1Chapters/Implementation/mainCode.tex
@@ -17,13 +17,11 @@ startAddr	.set	0x001860
 bCoeff		.set	0+startAddr
 dataIn1		.set	101+startAddr
 firOut1		.set	160+startAddr
-i1			.set	180+startAddr ; Data pointer
-k1			.set	181+startAddr ; FIR output pointer
-b1			.set	182+startAddr ; Band pass filter data pointer
-d1			.set	183+startAddr ; Delay pointer
 \end{lstlisting}
 
-As described in \textbf{XX} using a multirate system consisting of decimating and interpolating by two results in a geometric series, where the first stage of decimation and interpolation runs every sample, the first decimated stage runs every second sample and so fourth. If all of the seven multistages are schedueled the following scheduele is obtained as seen on \autoref{tb:schedueling}.    
+The start adress of "array" is 0x001860 and from this start adress the different variales are given a memory slot relative to that start adress. C variables are either initialized into the array using foor loops or if they have no relation to the assembler files, they are just placed outside "array".
+
+The main program handles the overall system described in \textbf{XX}. The multirate stages consisting of decimating and interpolating by two, results in a geometric series, where the first stage of decimation and interpolation runs every sample, the first decimated stage runs every second sample and so fourth. If all of the seven multistages are schedueled the following scheduele is obtained as seen on \autoref{tb:schedueling}.    
 
 
 
@@ -114,5 +112,6 @@ Where: \\
 The listing shows how a sample 1 of the schedueling in \autoref{tb:schedueling} is processed in the main program. A sample starts by waiting until a new sample has arrived which happens if "Rcv" and "I2S0\_IR" is equal to 1. The sample is then read into "audioIn" where a volume control is applied in line 4. Decimation is then done using downFunc1 with the input "audioIn" for the first stage. From downFunc1 two outputs "band1" and "down1" is read directly from. If decimation was done in the second stage the input for downFunc2 is the decimated signal "down1" and the output would be "band2" and "down2".
 
 "Band1" is read into delayB1 which delays the sample X time dependent on which band it is, where the output is "delayVar1". The delayed sample is the read into the interpolation functions upFuncX. In this sample upFunc16, upFunc2 and upFunc1 runs. The input for the function is both a specific band and the upsampled signal. After the signal has been upsampled a sample has to be outputted, which is done in the same way as reading in an input. A while loop is repeated until the sample is ready to be outputtet, here either a bypassed signal or the upsampled can be ouputtet dependent on the variable "byPass". The sample is inputted in mono but outputtet as stereo. 
+
 
 
