--- a/Rapport/1Chapters/Implementation/ImplementationMAIN.tex
+++ b/Rapport/1Chapters/Implementation/ImplementationMAIN.tex
@@ -3,3 +3,5 @@
 \input{1Chapters/Implementation/mainCode.tex}
 
 \input{1Chapters/Implementation/filterImplementation.tex}
+
+\input{1Chapters/Implementation/Compressor.tex}
