--- a/Rapport/1Chapters/Filters/ReqInterface.tex
+++ b/Rapport/1Chapters/Filters/ReqInterface.tex
@@ -6,7 +6,7 @@ A filter for decimation will be designed which must meet requirements 9, and a f
 
 Because the system is a multirate system with octave bands as mentioned in \autoref{ch:designRealisation} only one filter needs to be designed because the sampling frequency is halved for every octave resulting in the same coefficients for all decimation and interpolation filters.
 
-\section{Decimation filter}
+\section{Decimation filter}\label{sec:decFilter}
 The decimation filter must meet requirement 9 as just mentioned which states the requiremetns of the filter. The requirement can be seen in \autoref{fig:band1_reqOverview} and \autoref{tb:normalizedReqClass2} states the requirements to the figure.
 
 \begin{figure}[H]
