--- a/Rapport/1Chapters/Filters/Design.tex
+++ b/Rapport/1Chapters/Filters/Design.tex
@@ -63,30 +63,49 @@ With the specification stated and using the matlab script explained in \autoref{
 
 From \autoref{fig:band1_filt} it can be concluded that the filter meets the band requirements and has a constant group delay which means that spectral subtraction can be made from the output. This concludes the decimation filter. 
 
-\section{Interpolation filter}
-The interpolation filter as mentioned before must be designed so it does not influence the bandwidth of the decimated signal therefore the passband of the interpolation filter must be larger than stopband of the decimation filter. This means that the passband of the filter must be above 0.3 rad/sample, while there must be an attenuation of minimum 60 dB at 1 rad/sample (Fs/2). From these demands the following demands are set for the interpolation filter
+\section{Interpolation filter} \label{sec:IntFilter}
+The interpolation filter as mentioned before must be designed so it does not influence the bandwidth of the decimated signal therefore the passband of the interpolation filter must be larger than stopband of the decimation filter. This means that the passband of the filter must be above 0.3 rad/sample, while there must be an attenuation of minimum 80 dB at 1 rad/sample (Fs/2). From these demands the following demands are set for the interpolation filter
 \todo[inline]{Oppenheim reference}
 
 $\omega_{pass}=0,3 \enhed{rad/sample}$\\
 $A_{pass}=0 \enhed{dB}$\\
 $\omega_{pass}=1 \enhed{rad/sample}$\\
-$A_{pass}=-60 \enhed{dB}$
+$A_{pass}=-80 \enhed{dB}$
 
 A buffer is given to both $\omega_{pass}$ and $\omega_{stop}$ because of quantization, so the following requirements are set for the filter.
 
-$\omega_{pass}=0,3 \enhed{rad/sample}$\\
-$A_{pass}=0 \enhed{dB}$\\
-$\omega_{pass}=0,8 \enhed{rad/sample}$\\
-$A_{pass}=-60 \enhed{dB}$
+$\omega_{pass}=0,4 \enhed{rad/sample}$\\
+$A_{pass}=-1 \enhed{dB}$\\
+$\omega_{pass}=0,7 \enhed{rad/sample}$\\
+$A_{pass}=-80 \enhed{dB}$
 
  If the kaiser window method is used and the same FIR theory and matlab script is used as with the decimatino filter the following filter is given with quatisized coefficient, see for magnitude response and for phase response. The order of the filter is XX, it is a type 1 FIR filter and has linear phase with a group delay of XX samples.
 
-\todo[inline]{Magnitude response figure}
+\begin{figure}[H]
+	\centering
+	\tikzsetnextfilename{IntMag}
+	\input{figures/IntMag.tex}
+	\caption{Interpolation magnitude response.}
+	\label{fig:IntMag}
+\end{figure}
 
-\todo[inline]{Phase response figure}
+\begin{figure}[H]
+	\centering
+	\tikzsetnextfilename{IntPhase}
+	\input{figures/IntPhase.tex}
+	\caption{Interpolation filter´s phase response.}
+	\label{fig:IntPhase}
+\end{figure}
 
 From XX it can be verified that the filter meets the requirements sat up for the filter. It is seen that the interpolation filter does not attenuate before after the stopband bandwidth of the decimation filter (0,3 rad/sample) and has an attenuation of at least 60 dB at 1 rad/sample. On XX the decimation filter and interpolation filter´s magnitude response is seen.  
 
-\todo[inline]{Magnitude response figure of decimation and interpolation filter}
+\begin{figure}[H]
+	\centering
+	\tikzsetnextfilename{DecIntComp}
+	\input{figures/DecIntComp.tex}
+	\caption{Decimation and interpolation filter´s magnitude response compared.}
+	\label{fig:decIntComp}
+\end{figure}
+
 
 The decimation and interpolation filter is now designed with quantisized values. The implementation of the filters can be seen in XX.    
