--- a/Rapport/1Chapters/Implementation/mainCode.tex
+++ b/Rapport/1Chapters/Implementation/mainCode.tex
@@ -38,32 +38,32 @@ The main program handles the overall system described in \textbf{XX}. The multir
 1   & 2   & 3  & 4  & 5  & 6  & 7  & 8  & 9   & 10  & 11 & 12 & 13 & 14 & 15 & 16 \\ \hline
 D1  & D1  & D1 & D1 & D1 & D1 & D1 & D1 & D1  & D1  & D1 & D1 & D1 & D1 & D1 & D1 \\ \hline
 U1  & U1  & U1 & U1 & U1 & U1 & U1 & U1 & U1  & U1  & U1 & U1 & U1 & U1 & U1 & U1 \\ \hline
-U2  & D2  & U2 & D2 & U2 & D2 & U2 & D2 & U2  & D2  & U2 & D2 & U2 & D2 & U2 & D2 \\ \hline
-U16 & D16 & U4 & D4 & U8 & D8 & U4 & D4 & U32 & D32 & U4 & D4 & U8 & D8 & U4 & D4 \\ \hline
+D2  & U2  & D2 & U2 & D2 & U2 & D2 & U2 & D2  & U2  & D2 & U2 & D2 & U2 & D2 & U2 \\ \hline
+D16 & U16 & D4 & U4 & D8 & U8 & D4 & U4 & D32 & U32 & D4 & U4 & D8 & U8 & D4 & U4 \\ \hline
 \rowcolor[HTML]{C0C0C0} 
 \multicolumn{16}{|c|}{\cellcolor[HTML]{C0C0C0}Sample}                             \\ \hline
 \rowcolor[HTML]{C0C0C0} 
 17  & 18  & 19 & 20 & 21 & 22 & 23 & 24 & 25  & 26  & 27 & 28 & 29 & 30 & 31 & 32 \\ \hline
 D1  & D1  & D1 & D1 & D1 & D1 & D1 & D1 & D1  & D1  & D1 & D1 & D1 & D1 & D1 & D1 \\ \hline
 U1  & U1  & U1 & U1 & U1 & U1 & U1 & U1 & U1  & U1  & U1 & U1 & U1 & U1 & U1 & U1 \\ \hline
-U2  & D2  & U2 & D2 & U2 & D2 & U2 & D2 & U2  & D2  & U2 & D2 & U2 & D2 & U2 & D2 \\ \hline
-U16 & D16 & U4 & D4 & U8 & D8 & U4 & D4 & U64 & D64 & U4 & D4 & U8 & D8 & U4 & D4 \\ \hline
+D2  & U2  & D2 & U2 & D2 & U2 & D2 & U2 & D2  & U2  & D2 & U2 & D2 & U2 & D2 & U2 \\ \hline
+D16 & U16 & D4 & U4 & D8 & U8 & D4 & U4 & D64 & U64 & D4 & U4 & D8 & U8 & D4 & U4 \\ \hline
 \rowcolor[HTML]{C0C0C0} 
 \multicolumn{16}{|c|}{\cellcolor[HTML]{C0C0C0}Sample}                             \\ \hline
 \rowcolor[HTML]{C0C0C0} 
 33  & 34  & 35 & 35 & 37 & 38 & 39 & 40 & 41  & 42  & 43 & 44 & 45 & 46 & 47 & 48 \\ \hline
 D1  & D1  & D1 & D1 & D1 & D1 & D1 & D1 & D1  & D1  & D1 & D1 & D1 & D1 & D1 & D1 \\ \hline
 U1  & U1  & U1 & U1 & U1 & U1 & U1 & U1 & U1  & U1  & U1 & U1 & U1 & U1 & U1 & U1 \\ \hline
-U2  & D2  & U2 & D2 & U2 & D2 & U2 & D2 & U2  & D2  & U2 & D2 & U2 & D2 & U2 & D2 \\ \hline
-U16 & D16 & U4 & D4 & U8 & D8 & U4 & D4 & U32 & D32 & U4 & D4 & U8 & D8 & U4 & D4 \\ \hline
+D2  & U2  & D2 & U2 & D2 & U2 & D2 & U2 & D2  & U2  & D2 & U2 & D2 & U2 & D2 & U2 \\ \hline
+D16 & U16 & D4 & U4 & D8 & U8 & D4 & U4 & D32 & U32 & D4 & U4 & D8 & U8 & D4 & U4 \\ \hline
 \rowcolor[HTML]{C0C0C0} 
 \multicolumn{16}{|c|}{\cellcolor[HTML]{C0C0C0}Sample}                             \\ \hline
 \rowcolor[HTML]{C0C0C0} 
 49  & 50  & 51 & 52 & 53 & 54 & 55 & 56 & 57  & 58  & 59 & 60 & 61 & 62 & 63 & 64 \\ \hline
 D1  & D1  & D1 & D1 & D1 & D1 & D1 & D1 & D1  & D1  & D1 & D1 & D1 & D1 & D1 & D1 \\ \hline
 U1  & U1  & U1 & U1 & U1 & U1 & U1 & U1 & U1  & U1  & U1 & U1 & U1 & U1 & U1 & U1 \\ \hline
-U2  & D2  & U2 & D2 & U2 & D2 & U2 & D2 & U2  & D2  & U2 & D2 & U2 & D2 & U2 & D2 \\ \hline
-U16 & D16 & U4 & D4 & U8 & D8 & U4 & D4 &     &     & U4 & D4 & U8 & D8 & U4 & D4 \\ \hline
+D2  & U2  & D2 & U2 & D2 & U2 & D2 & U2 & D2  & U2  & D2 & U2 & D2 & U2 & D2 & U2 \\ \hline
+D16 & U16 & D4 & U4 & D8 & U8 & D4 & U4 &     &     & D4 & U4 & D8 & U8 & D4 & U4 \\ \hline
 \end{tabular}
 \caption{Schedueling (D1 = downFunc1, D2 = downFunc2 etc.)(U1 = upFunc1, U2 = upFunc2 etc.).}
 \label{tb:schedueling}
