--- a/Rapport/2Appendix/SpeakerTEST.tex
+++ b/Rapport/2Appendix/SpeakerTEST.tex
@@ -54,10 +54,11 @@ IEC 60268-5 standard.
 \end{subfigure}
 \begin{subfigure}[b]{\textwidth}
 	\centering
-	\tikzsetnextfilename{TestSetup1}
-	\input{figures/TestSetup1.tex}
+%	\tikzsetnextfilename{TestSetup1}
+%	\input{figures/TestSetup1.tex}
+	\includegraphics[width=\textwidth]{TestSetup1}
 	\caption{Schematic overview}
-	\label{figure:SpeakertestSetup}
+	\label{figure:SpeakertestSetup}	
 \end{subfigure}
 \caption{The entire test setup shown with photographs and a schematic overview}
 \label{fig:test_setup_R}
