--- a/Rapport/2Appendix/SpeakerTESTOneFrequency.tex
+++ b/Rapport/2Appendix/SpeakerTESTOneFrequency.tex
@@ -32,10 +32,11 @@ IEC 60268-5 standard.
 
 \begin{figure}[H]
 \centering
-\tikzsetnextfilename{TestSetup1}
-\scalebox{0.7}{
-\input{figures/TestSetup1.tex}
-}
+%\tikzsetnextfilename{TestSetup1}
+%\scalebox{0.7}{
+%\input{figures/TestSetup1.tex}
+%}
+\includegraphics[width=\textwidth]{TestSetup1}
 \caption{Test setup}
 \label{figure:SpeakertestSetup2}
 \end{figure}
