--- a/Rapport/main.tex
+++ b/Rapport/main.tex
@@ -149,7 +149,8 @@
  \part{Appendix}
  \appendix
 % \addcontentsline{toc}{chapter}{Appendix}
-%\include{2Appendix/AppendixMAIN}
+\include{2Appendix/AppendixMAIN}
+\include{2Appendix/LookUP}
 
 
 \end{document}
